tests-system/check-wo-type/output
checks {
       ^ check-wo-type/checks.check:3: error: expected identifier, encountered opening brace '{' instead
